Drive QueryFunctionQueryTest variants via index table types, not WhatKindaRange
The prior migration re-ingested data per WhatKindaRange and threaded a range
parameter through every @ParameterizedTest, duplicating variance that
AbstractQueryTest already provides by iterating index table types. Ingest
data once (matching other WiseGuysIngest-based migrations) and let the
default getIndexTableNames() drive the shard/document range distinction.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>